styles/Home.module.css
.container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: 	#f5f5f5;
}

.main {
  padding: 0.3rem 0;
  flex: 10;
  display: flex;
  flex-direction: column;
  justify-content: top;
  align-items: center;
}

.secretDisplay {
  width: 95%;
  min-height: 8rem;
  margin-top: 0rem;
}

.secretOutput {
  border: 1px solid;
  margin: 0.5rem;
  padding: 1rem;
  font-family: monospace;
  border-radius: 10px;
  background-color: white;
}

.copiable {
  margin-left: 0.5em;
  margin-right: 0.5em;
  text-align: center;
  line-height: 1.5;
  font-size: 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.shareURL {
  font-size: 0.8rem;
  border: 1px solid black;
  border-radius: 16px;
  display: block;
  box-sizing: inherit;
  padding: 1em 16px;
  background-color: white;
  color: navy;
  min-width: 200px;
}

.button {
  font-size: 1rem;
  font-weight: 800;
  cursor: pointer;
  margin: 0.5rem;
  padding: 0.5rem;
  text-decoration: none;
  border: 1px solid gray;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  text-align: center;
  width: 200px;
  background-color: #f0f0f0;
}

.button:hover,
.button:focus,
.button:active {
  color: #0070f3;
  border-color: #0070f3;
}

.accessLog {
  display: flex;
  flex-direction: column;
}

.accessLogEntry {
  border: 1px solid gray;
  border-radius: 10px;
  margin: 2px;
  font-size: 0.8rem;
  padding: 2px;
  text-align: left;
}

.footer {
  display: flex;
  flex: 1;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.footerLink {
  text-decoration: underline;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 1rem;
  text-align: left;
  line-height: 1.15;
  font-size: 2rem;
  width: 50%;
}

.header {
  margin: 0;
  position: sticky;
  top: 0;
  background-color: #f5f5f5;
  border-bottom: 1px solid #eaeaea;
  display: flex;
  flex: row;
}

.subtitle {
  color: darkgray;
  text-align: right;
  position: absolute;
  bottom: 0;
  right: 1em;
}

.description {
  text-align: center;
  margin: 2rem 0;
  line-height: 1.5;
  font-size: 1.5rem;
}

.passwordInput {
  width: 13rem;
}

.sharePair {
  display: flex;
  flex: row;
  justify-content:space-around;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

.loadingLayout {
  display: flex;
  height: 100vh;
}

.loading,
.loading:after {
  border-radius: 50%;
  width: 5em;
  height: 5em;
}
.loading {
  margin: auto auto;
  border: 0.8em solid #f4e9f1;
  border-left: 0.8em solid #8d2676;
  animation: load8 1.1s infinite linear;
}
@keyframes load8 {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

